Added all code again due to some technical problem

--- a/package.json
+++ b/package.json
@@ -1,32 +1,25 @@
 {
-  "name": "todo-app-with-next-js",
+  "name": "try",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "json-server": "json-server --watch src/data/todos.json --port 3001"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.4.1",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
+    "@types/node": "20.4.2",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "daisyui": "^3.2.1",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
-    "json-server": "^0.17.3",
-    "mobx": "^6.9.1",
-    "mobx-react-lite": "^4.0.3",
-    "mobx-state-tree": "^5.1.8",
     "next": "13.4.9",
-    "postcss": "8.4.25",
+    "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "uuid": "^9.0.0"
   },
